--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,23 @@
-@import './base.css';
+@import "./base.css";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: var(--background-color);
+  font-family:
+    ui-sans-serif,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    "Helvetica Neue",
+    Arial,
+    sans-serif;
 }
+
+h1, h2, h3, h4 {
+  color: var(--heading-purple);
+}
+
