--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -24,3 +24,24 @@ body{
   background-color: var(--background-color);
 }
 
+
+  ::-webkit-scrollbar {
+    width: 3pt;
+    height: 6pt; 
+    padding: 3pt;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #888; 
+    border-radius: 10pt;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555555;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1; 
+    border-radius: 10pt; 
+  }
+
